Added reference to oap.maven artifact. Deleted repeatable configuration