@@ -26,16 +26,18 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>oap</groupId>
+        <artifactId>oap.maven</artifactId>
+        <version>1.0.0</version>
+    </parent>
+
     <packaging>pom</packaging>
     <groupId>oap</groupId>
     <artifactId>oap</artifactId>
     <version>${revision}</version>
 
     <name>oap</name>
-
-    <prerequisites>
-        <maven>3.5.0</maven>
-    </prerequisites>
 
     <modules>
         <module>oap-stdlib</module>
@@ -57,22 +59,8 @@
         </repository>
     </repositories>
 
-    <distributionManagement>
-        <repository>
-            <id>oap</id>
-            <url>https://mvn.oaplatform.org/</url>
-        </repository>
-    </distributionManagement>
-
     <properties>
         <revision>6.2.10</revision>
-
-        <maven.compiler.source>13</maven.compiler.source>
-        <maven.compiler.target>13</maven.compiler.target>
-
-        <encoding>UTF-8</encoding>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <project.reporting.outputEncoding>${project.build.sourceEncoding}</project.reporting.outputEncoding>
 
         <testng.version>7.0.0</testng.version>
         <assertj.version>3.14.0</assertj.version>
@@ -92,153 +80,4 @@
         <gson.version>2.8.6</gson.version>
         <micrometer.version>1.3.1</micrometer.version>
     </properties>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
-                <configuration>
-                    <useIncrementalCompilation>true</useIncrementalCompilation>
-                    <compilerArgs>
-                        <arg>-parameters</arg>
-                        <arg>-Xlint:unchecked</arg>
-                        <arg>-Xlint:preview</arg>
-                        <arg>--enable-preview</arg>
-                    </compilerArgs>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.22.1</version>
-                <configuration>
-                    <argLine>
-                        -ea
-                        --enable-preview
-                        -Dlogback.configurationFile=${session.executionRootDirectory}/oap-stdlib/src/test/resources/logback-test.xml
-                    </argLine>
-                    <trimStackTrace>false</trimStackTrace>
-                    <!--TODO: remove this ignore once all tests pass
-                         For tests dependent on the external services, make the separate profile to run them
-                         within a specific environment-->
-                    <testFailureIgnore>true</testFailureIgnore>
-                    <useFile>true</useFile>
-                    <disableXmlReport>false</disableXmlReport>
-                    <printSummary>true</printSummary>
-                    <forkedProcessTimeoutInSeconds>4800</forkedProcessTimeoutInSeconds>
-                    <!--<forkMode>once</forkMode>-->
-                    <useSystemClassLoader>false</useSystemClassLoader>
-                    <runOrder>balanced</runOrder>
-                    <includes>
-                        <include>**/*Test.*</include>
-                        <include>**/*TestCase.*</include>
-                        <include>**/*Suite.*</include>
-                    </includes>
-                    <excludedGroups>PERFORMANCE</excludedGroups>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <version>3.0.1</version>
-                <artifactId>maven-source-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <id>attach-sources</id>
-                        <goals>
-                            <goal>jar</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>flatten-maven-plugin</artifactId>
-                <version>1.1.0</version>
-                <configuration>
-                    <updatePomFile>true</updatePomFile>
-                    <flattenMode>resolveCiFriendliesOnly</flattenMode>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>flatten</id>
-                        <phase>process-resources</phase>
-                        <goals>
-                            <goal>flatten</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>flatten.clean</id>
-                        <phase>clean</phase>
-                        <goals>
-                            <goal>clean</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
-
-    <profiles>
-        <profile>
-            <id>PERFORMANCE</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.19.1</version>
-                        <configuration>
-                            <argLine>
-                                -Dlogback.configurationFile=${session.executionRootDirectory}/oap-stdlib/src/test/resources/logback-perf.xml
-                                --enable-preview
-                            </argLine>
-                            <trimStackTrace>false</trimStackTrace>
-                            <testFailureIgnore>true</testFailureIgnore>
-                            <useFile>true</useFile>
-                            <disableXmlReport>false</disableXmlReport>
-                            <printSummary>true</printSummary>
-                            <forkedProcessTimeoutInSeconds>9600</forkedProcessTimeoutInSeconds>
-                            <forkMode>once</forkMode>
-                            <useSystemClassLoader>false</useSystemClassLoader>
-                            <runOrder>balanced</runOrder>
-                            <includes>
-                                <include>**/*Performance.*</include>
-                            </includes>
-                        </configuration>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-enforcer-plugin</artifactId>
-                        <version>3.0.0-M2</version>
-                        <executions>
-                            <execution>
-                                <id>no-duplicate-declared-dependencies</id>
-                                <goals>
-                                    <goal>enforce</goal>
-                                </goals>
-                                <configuration>
-                                    <rules>
-                                        <banDuplicatePomDependencyVersions/>
-                                    </rules>
-                                </configuration>
-                            </execution>
-                            <execution>
-                                <id>enforce</id>
-                                <configuration>
-                                    <rules>
-                                        <requireUpperBoundDeps />
-                                    </rules>
-                                </configuration>
-                                <goals>
-                                    <goal>enforce</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-    </profiles>
 </project>
